--- a/style.css/style.css
+++ b/style.css/style.css
@@ -2,8 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+ 
   font-family: "Jost", sans-serif;
+ 
 }
 
 body {
@@ -16,6 +17,7 @@ body {
 .header {
   width: 80%;
   height: 50px;
+  
 
   margin: 0 auto;
   padding: 50px;
@@ -105,12 +107,12 @@ select {
   font-size: 50px;
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 400px) {
   body {
     height: 160vh;
     background-image: url(../images/mechet.jpg);
     background-repeat: repeat;
-
+    overflow-x: hidden;
     backdrop-filter: blur(5px);
   }
 
@@ -136,8 +138,14 @@ select {
   .card img {
     width: 138px;
   }
+  
+  .bg-card-1{
+    display: none;
+  }
 
-
+  .bg-card-2{
+    display: none;
+  }
   .text {
     font-size: 10px;
     display: flex;
@@ -154,6 +162,7 @@ select {
     -moz-border-radius: 2px;
     -ms-border-radius: 2px;
     -o-border-radius: 2px;
+    display: none;
 }
 
   @keyframes slidein {
