--- a/style.css/style.css
+++ b/style.css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
- 
+
   font-family: "Jost", sans-serif;
  
 }
@@ -11,7 +11,7 @@ body {
   background-image: url(../images/Background.png);
 
   background-size: 100%;
-  background-repeat: no-repeat;
+  
 }
 
 .header {
@@ -107,13 +107,43 @@ select {
   font-size: 50px;
 }
 
+.card-img{
+  width: 200px;
+}
+
+
+
+table{
+ color: rgb(0, 244, 8);
+ width: 90%;
+ height: 00px;
+ margin: 0 auto;
+ text-align: center;
+ margin-top: 40px;
+
+}
+
+td{
+  border: 1px solid #ffffff;
+
+}
+
+th{
+ 
+  flex-wrap: wrap;
+  border: 2px solid #ffffff;
+}
+
+
 @media only screen and (max-width: 450px) {
   body {
-    height: 160vh;
+    height: 177vh;
     background-image: url(../images/mechet.jpg);
     background-repeat: repeat;
     overflow-x: hidden;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(2px);
+    scroll-behavior: smooth;
+  
   }
 
   .row {
@@ -127,19 +157,32 @@ select {
     position: absolute;
     top: 200px;
   }
-
+.header h1{
+  color: rgb(0, 0, 0);
+}
   .card {
-    width: 170px;
+    width: 180px;
     position: relative;
-   
-
+    background-color: #58ff4f;
     text-align: center;
+   
   }
 
+.card:hover{
+  background-color: rgba(102, 255, 0, 0.555);
+}
   .card img {
     width: 138px;
   }
   
+  .card h2{
+    color: rgb(222, 2, 2);
+  }
+  
+  .card h3{
+    color: rgb(0, 0, 0);
+  }
+
   .bg-card-1{
     display: none;
   }
@@ -148,40 +191,43 @@ select {
     display: none;
   }
   .text {
-    font-size: 10px;
+    font-size: 14px;
     display: flex;
     position: absolute;
     top: 220px;
-    left: 34px;
-    animation-name: slidein;
-    animation-duration: 40s;
-    animation-iteration-count: 1000;
-    width: 500px;
-    background-color: rgb(7, 255, 28);
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    -o-border-radius: 2px;
-    display: none;
+    color:rgb(255, 255, 255);
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+  
 }
 
-  @keyframes slidein {
-    from {
-      transform: translateX(100%);
+.container-3 .row{
+  margin-top: 23px;
+}
+table{
+  width: 10px;
+  position: absolute;
+  bottom: 15px;
+  font-size: 10px ;
+  border-color:  #7e0000;
+ 
+}
 
-      -webkit-transform: translateX(100%);
-      -moz-transform: translateX(100%);
-      -ms-transform: translateX(100%);
-      -o-transform: translateX(100%);
-    }
+.row-1 h4{
+position: absolute;
+bottom: 170px;
+text-align: center;
+color: rgba(2, 2, 2, 0.936);
+background-color: #f4fff538;
+width: 100%;
+}
 
-    to {
-      transform: translateX(-150%);
-      -webkit-transform: translateX(-150%);
-      -moz-transform: translateX(-150%);
-      -ms-transform: translateX(-150%);
-      -o-transform: translateX(-150%);
-    }
-  }
+select{
+  background-color: #1846eb53;
+}
+
+.box-1 h2{
+color: rgb(0, 0, 0);
+}
+
 }
