--- a/style.css/style.css
+++ b/style.css/style.css
@@ -205,11 +205,12 @@ th{
   margin-top: 23px;
 }
 table{
-  width: 10px;
+  width: 100%;
   position: absolute;
   bottom: 15px;
-  font-size: 10px ;
+  font-size: 14px ;
   border-color:  #7e0000;
+  margin: 0 auto;
  
 }
 
@@ -218,7 +219,6 @@ position: absolute;
 bottom: 170px;
 text-align: center;
 color: rgba(2, 2, 2, 0.936);
-background-color: #f4fff538;
 width: 100%;
 }
 
