--- a/style.css/style.css
+++ b/style.css/style.css
@@ -3,22 +3,19 @@
   padding: 0;
   box-sizing: border-box;
 
-  font-family: "Jost", sans-serif;
- 
+  font-family: "Poppins";
 }
 
 body {
   background-image: url(../images/Background.png);
 
   background-size: 100%;
-  
+  background-color: #00ccff;
 }
 
 .header {
   width: 80%;
   height: 50px;
-  
-
   margin: 0 auto;
   padding: 50px;
   color: #ffffff;
@@ -42,8 +39,8 @@ body {
   color: #ffffff;
 }
 
-.text{
-    display: none;
+.text {
+  display: none;
 }
 select {
   padding: 10px 18px;
@@ -65,14 +62,14 @@ select {
   padding-top: 100px;
 }
 
-.row-1 h4{
- position: relative;
- top: 23px;
- text-transform: uppercase;
+.row-1 h4 {
+  position: relative;
+  top: 23px;
+  text-transform: uppercase;
   text-align: center;
   color: rgba(255, 255, 255, 0.936);
   width: 100%;
-  }
+}
 
 .row {
   display: flex;
@@ -90,12 +87,16 @@ select {
 }
 
 .card:hover .card-img {
-  transform: scale(0.9);
+  transform: scale(1.1);
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
 }
 
 .card {
@@ -116,87 +117,105 @@ select {
   font-size: 50px;
 }
 
-.card-img{
+.card-img {
   width: 200px;
 }
 
+table {
+  color: rgb(0, 244, 8);
+  width: 90%;
 
-
-table{
- color: rgb(0, 244, 8);
- width: 90%;
- height: 00px;
- margin: 0 auto;
- text-align: center;
- margin-top: 40px;
-
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 40px;
 }
 
-td{
+td {
   border: 1px solid #ffffff;
-
 }
 
-th{
- 
+th {
   flex-wrap: wrap;
   border: 2px solid #ffffff;
 }
 
-
 @media only screen and (max-width: 450px) {
   body {
-    height: 177vh;
-    background-image: url(../images/mechet.jpg);
-    background-repeat: repeat;
+
+
+    background-color: #00ccff;
     overflow-x: hidden;
     backdrop-filter: blur(2px);
     scroll-behavior: smooth;
-  
   }
 
   .row {
-    display: flex;
+    /*display: flex;
     flex-wrap: wrap;
+    */
+    display: block;
     justify-content: center;
     gap: 20px;
     width: 100%;
     margin: 0 auto;
-    color: #ffffff;
+
     position: absolute;
     top: 200px;
   }
-.header h1{
-  color: rgb(0, 0, 0);
-}
+  .header {
+    width: 330px;
+  }
+  .header h1 {
+    color: #ffffd0;
+
+    font-size: 29px;
+
+    color: #5c008f;
+  }
+
   .card {
-    width: 180px;
+    width: 340px;
+    height: 80px;
     position: relative;
-    background-color: #58ff4f;
+
     text-align: center;
-   
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    margin: 30px auto;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    background-color: rgba(109, 109, 156, 0.229);
+    backdrop-filter: blur(3px);
   }
 
-.card:hover{
-  background-color: rgba(102, 255, 0, 0.555);
-}
+  .card:hover {
+    transform: scale(0.9);
+    transition: 0.5s ease all;
+    -webkit-transition: 0.5s ease all;
+    -moz-transition: 0.5s ease all;
+    -ms-transition: 0.5s ease all;
+    -o-transition: 0.5s ease all;
+  }
   .card img {
-    width: 138px;
-  }
-  
-  .card h2{
-    color: rgb(222, 2, 2);
-  }
-  
-  .card h3{
-    color: rgb(0, 0, 0);
+    width: 50px;
   }
 
-  .bg-card-1{
+  .card h2 {
+    color: #ffffd0;
+  }
+
+  .card h3 {
+    font-size: 23px;
+
+    color: #ffffd0;
+  }
+
+  .bg-card-1 {
     display: none;
   }
 
-  .bg-card-2{
+  .bg-card-2 {
     display: none;
   }
   .text {
@@ -204,39 +223,119 @@ th{
     display: flex;
     position: absolute;
     top: 220px;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     text-align: center;
     background-color: rgb(0, 0, 0);
-  
+    display: none;
+  }
+
+  .container-3 .row {
+    margin-top: 23px;
+  }
+
+  .row-1 {
+    display: none;
+  }
+
+  table {
+    width: 100%;
+    position: absolute;
+    bottom: 15px;
+    font-size: 10px;
+    border-color: #7e0000;
+    margin: 0 auto;
+  }
+
+  .row-1 h4 {
+    position: absolute;
+    bottom: 170px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.936);
+    width: 100%;
+  }
+
+  select {
+    background-color: #1846eb00;
+    position: relative;
+    z-index: 8888;
+    color: #ffffd0;
+  }
+
+  .box-1 h2 {
+    color: #ffffd0;
+  }
+
+  .box-2 {
+    border: #7e0000;
+  }
+
+  .header-bg {
+    height: 230px;
+    /* background-color: #00ccff; */
+    margin: 3px;
+    border-radius: 5px 5px 44px 30px;
+    -webkit-border-radius: 5px 5px 44px 30px;
+    -moz-border-radius: 5px 5px 44px 30px;
+    -ms-border-radius: 5px 5px 44px 30px;
+    -o-border-radius: 5px 5px 44px 30px;
+  }
+
+  .section-bg .row {
+    background-color: #5c008f;
+    border-radius: 32px 32px 0px 0px;
+    -webkit-border-radius: 32px 32px 0px 0px;
+    -moz-border-radius: 32px 32px 0px 0px;
+    -ms-border-radius: 32px 32px 0px 0px;
+    -o-border-radius: 32px 32px 0px 0px;
+    margin-top: 40px;
+  }
+
+  option {
+    background-color: red;
+    background-color: #5c008f;
+    color: #ffffd0;
+  }
+
+  /* loader */
+
+  .l {
+    width: 100%;
+    height: 130vh;
+    background-color: #00ccff;
+    position: absolute;
+    margin-left: -3px;
+    z-index: 99999999999;
+    overflow: hidden;
+    
+  }
+
+  .loader {
+    display: block;
+    position: relative;
+    height: 12px;
+    width: 80%;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 400px auto;
+  }
+  .loader:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 0;
+    background: #5c008f;
+    animation: 6s prog cubic-bezier(.77,.05,.28,1.51) infinite;
+    -webkit-animation: 6s prog cubic-bezier(.77,.05,.28,1.51) infinite;
 }
 
-.container-3 .row{
-  margin-top: 23px;
-}
-table{
-  width: 100%;
-  position: absolute;
-  bottom: 15px;
-  font-size: 10px ;
-  border-color:  #7e0000;
-  margin: 0 auto;
- 
-}
+  @keyframes prog {
+    to {
+      width: 100%;
+    }
+  }
 
-.row-1 h4{
-position: absolute;
-bottom: 170px;
-text-align: center;
-color: rgba(255, 255, 255, 0.936);
-width: 100%;
-}
-
-select{
-  background-color: #1846eb53;
-}
-
-.box-1 h2{
-color: rgb(0, 0, 0);
-}
-
+  /* loader end */
 }
