--- a/style.css/style.css
+++ b/style.css/style.css
@@ -141,8 +141,6 @@ th {
 
 @media only screen and (max-width: 450px) {
   body {
-
-
     background-color: #00ccff;
     overflow-x: hidden;
     backdrop-filter: blur(2px);
@@ -301,12 +299,12 @@ th {
   .l {
     width: 100%;
     height: 130vh;
-    background-color: #00ccff;
+    background-color: #111;
     position: absolute;
     margin-left: -3px;
     z-index: 99999999999;
     overflow: hidden;
-    
+    color: #ffffd0;
   }
 
   .loader {
@@ -327,9 +325,9 @@ th {
     height: 100%;
     width: 0;
     background: #5c008f;
-    animation: 6s prog cubic-bezier(.77,.05,.28,1.51) infinite;
-    -webkit-animation: 6s prog cubic-bezier(.77,.05,.28,1.51) infinite;
-}
+    animation: 6s prog cubic-bezier(0.77, 0.05, 0.28, 1.51) infinite;
+    -webkit-animation: 6s prog cubic-bezier(0.77, 0.05, 0.28, 1.51) infinite;
+  }
 
   @keyframes prog {
     to {
@@ -337,5 +335,23 @@ th {
     }
   }
 
-  /* loader end */
+  .l h5 {
+    position: relative;
+    top: -200px;
+     left: -30px;
+    width: 420px;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .l h2 {
+    position: relative;
+    top: 360px;
+    color: #00ccff;
+    width: 420px;
+    text-align: center;
+    font-size: 30px;
+    left: -30px;
+  }
+  /* loader endd*/
 }
